增加LED控制器控制亮度

--- a/OTA_WEBSERVER_APP_Air_conditioner_controller/.vscode/settings.json
+++ b/OTA_WEBSERVER_APP_Air_conditioner_controller/.vscode/settings.json
@@ -19,6 +19,7 @@
     "freertos.h": "c",
     "freertosconfig.h": "c",
     "message_buffer.h": "c",
-    "event_groups.h": "c"
+    "event_groups.h": "c",
+    "*.inc": "c"
   }
 }
