--- a/OTA_WEBSERVER_APP_Air_conditioner_controller/.vscode/settings.json
+++ b/OTA_WEBSERVER_APP_Air_conditioner_controller/.vscode/settings.json
@@ -20,6 +20,16 @@
     "freertosconfig.h": "c",
     "message_buffer.h": "c",
     "event_groups.h": "c",
-    "*.inc": "c"
+    "*.inc": "c",
+    "optional": "c",
+    "istream": "c",
+    "ostream": "c",
+    "ratio": "c",
+    "system_error": "c",
+    "array": "c",
+    "functional": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "utility": "c"
   }
 }
